[package]
name = "fs-flatten"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Flatten files in folder"
repository = "https://github.com/oovm/fs-tools"
documentation = "https://docs.rs/fs-flatten"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dependencies.diagnostic-quick]
version = "0.3.0"
features = ["walkdir", "globset"]

[dev-dependencies]

[features]
default = []
