[package]
name = "task-system"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "A path representation for resource at local and remote."
repository = "https://github.com/oovm/fs-tools"
documentation = "https://docs.rs/task-system"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]



[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = "0.7.7"

[features]
default = []
