[package]
name = "task-system"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "A system that manage cancelable task."
repository = "https://github.com/oovm/fs-tools"
documentation = "https://docs.rs/task-system"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["tokio"]

[dependencies]



[dependencies.tokio]
version = "1.26.0"
features = []
optional = true

[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = "0.7.7"

[features]
default = []
